Bug 51810 - openformula requires error values written as office:value-type="string"
Summary: openformula requires error values written as office:value-type="string"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: odf odf_validation target:4.1.0
Keywords:
: 37993 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-06 18:52 UTC by Markus Mohrhard
Modified: 2013-06-24 15:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2012-07-06 18:52:59 UTC
Currently we seem to store error values not according to OpenFormula.

OpenFormula requires us to store error values as string and not as value. See http://docs.oasis-open.org/office/v1.2/cos01/OpenDocument-v1.2-cos01-part2.html#__RefHeading__1017900_715980110

Currently we write entries like: 

<table:table-cell table:formula="of:=SQRT(-1)" office:value-type="float" office:value="0">
<text:p>Err:502</text:p>
</table:table-cell>
Comment 1 Commit Notification 2013-04-25 15:11:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8b7c72425aabae87bfd2e141aa06f06319ae11c

add error to office:value-type for calc cells and fdo#51810



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Markus Mohrhard 2013-06-24 13:49:23 UTC
*** Bug 37993 has been marked as a duplicate of this bug. ***