add error to office:value-type for calc cells and fdo#51810

For cached value import we need the information which cells are error
cells. For ODF 1.2 extended we therefore export now calcext:office-value
with the additional value "error".

Change-Id: I9bc988ea4924bea767ba5e504b77f6a16e51a82e